--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "astro-bun-test",
   "version": "0.0.0",
   "private": "true",
+  "workspaces": [
+    "astro-bun-adapter",
+    "test-app"
+  ],
   "dependencies": {},
-  "devDependencies": {
-    "astro": "latest"
-  },
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro build",
-		"preview": "astro preview"
-	}
+  "devDependencies": {},
+	"scripts": {}
 }
