--- a/astro-bun-adapter/package.json
+++ b/astro-bun-adapter/package.json
@@ -2,7 +2,11 @@
   "name": "astro-bun-adapter",
   "version": "0.0.1",
   "type": "module",
-  "main": "index.js",
+  "exports": {
+    ".": "./index.js",
+    "./server.js": "./server.js",
+    "./package.json": "./package.json"
+  },
   "dependencies": {},
   "devDependencies": {
     "astro": "latest"
